--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "bulma": "^0.5.3",
     "core-js": "^2.4.1",
+    "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
